--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
               questions, our support team would be happy to help you.
             </p>
             <form action="#">
-              <input type="text" placeholder="email@example.com">
+              <label for="text_input"></label>
+              <input type="text" name="text_input" id="text_input" placeholder="email@example.com">
               <input type="submit" value="Get Started For Free">
             </form>
           </div>
